borsh-derive/src/internals/serialize/struct/snapshots/borsh_derive__internals__serialize__r#struct__tests__bound_generics.snap
---
source: borsh-derive/src/internals/serialize/struct/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Key, V> borsh::ser::BorshSerialize for A<K, V>
where
    V: Value,
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.x, writer)?;
        borsh::BorshSerialize::serialize(&self.y, writer)?;
        Ok(())
    }
}

