borsh-derive/src/internals/serialize/struct/snapshots/borsh_derive__internals__serialize__r#struct__tests__check_serialize_with_skip_conflict.snap
---
source: borsh-derive/src/internals/serialize/struct/mod.rs
expression: err
---
Error(
    "`borsh_skip` cannot be used at the same time as `serialize_with` or `deserialize_with`",
)
