borsh-derive/src/internals/serialize/struct/snapshots/borsh_derive__internals__serialize__r#struct__tests__generic_named_fields_struct_borsh_skip.snap
---
source: borsh-derive/src/internals/serialize/struct/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K, V, U> borsh::ser::BorshSerialize for G<K, V, U>
where
    U: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        borsh::BorshSerialize::serialize(&self.y, writer)?;
        Ok(())
    }
}

